# boxdotool

./: .gitignore  CMakeLists.txt  README  cmd_behave.c  cmd_behave_screen_edge.c  cmd_click.c  cmd_exec.c  cmd_get_desktop_for_window.c  cmd_get_display_geometry.c  cmd_getactivewindow.c  cmd_getmouselocation.c  cmd_getwindowclassname.c  cmd_getwindowfocus.c  cmd_getwindowgeometry.c  cmd_getwindowname.c  cmd_getwindowpid.c  cmd_key.c  cmd_mousemove.c  cmd_mousemove_relative.c  cmd_mouseup.c  cmd_search.c  cmd_select.c  cmd_set_desktop.c  cmd_set_desktop_for_window.c  cmd_set_num_desktops.c  cmd_set_window.c  cmd_sleep.c  cmd_type.c  cmd_window_select.c  cmd_windowactivate.c  cmd_windowclose.c  cmd_windowdecoration.c  cmd_windowfocus.c  cmd_windowkill.c  cmd_windowlower.c  cmd_windowmap.c  cmd_windowminimize.c  cmd_windowmove.c  cmd_windowraise.c  cmd_windowreparent.c  (+13 more)
t/: Makefile  ephemeral-x.sh  test_basic.rb  test_chaining.rb  test_cmd_key.rb  test_cmd_windowminimize.rb  test_mousemove.rb  test_search.rb  test_typing.rb  test_window.rb  xdo_test_helper.rb
